# markdown_reader

./: .gitignore  README.md  build.bat  mdreader.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  document_view.py  drives.py  editor.py  export.py  folder_search.py  icon.py  main.py  renderer.py  settings.py  single_instance.py  updater.py  web_editor.py  web_page.py  window.py
app/assets/: style-dark.css  style-light.css
app/templates/: page.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  bridge.ts  index.css  main.tsx
installer/: mdreader.iss
tests/: test_drives.py  test_export.py  test_folder_search.py  test_renderer.py  test_settings.py  test_updater.py
tools/: make_icon.py
