[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdreader"
version = "1.2.0"
description = "Просмотрщик и редактор Markdown-файлов и локальных wiki."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
    "markdown-it-py[linkify]>=3.0,<4",
    "mdit-py-plugins>=0.4,<1",
    "Pygments>=2.17,<3",
    "python-docx>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6",
    "PyInstaller>=6.5,<7",
]

[project.scripts]
mdreader = "app.main:main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["assets/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
